correcting UI alignment

--- a/src/app/matches/matches.component.css
+++ b/src/app/matches/matches.component.css
@@ -1,12 +1,21 @@
-.center-align div{
+.center-align div {
     text-align: center;
     /* width: 100%; */
 }
 
-.today{
+.today {
     background-color: #77e27d;
 }
 
-.matchday{
-    background-color: #ece09b;;
+.matchday {
+    background-color: #ece09b;
+    ;
+}
+
+.flag {
+    height: 60px;
+}
+
+.match-name {
+    height: 48px;
 }
